# wasm-action-experiments

./: README.md
.github/actions/rust-wasm/: .gitignore  Cargo.toml  action.yml  package.json
.github/actions/rust-wasm/src/: fetch.js  main.rs  utils.rs
.github/workflows/: rust-wasm.yml
