[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2021"

# [bin]
# [lib]
# crate-type = ["cdylib"]

[dependencies]
# actions-toolkit-bindings = { path = "actions-toolkit-bindings" }
# console_error_panic_hook = { version = "0.1.7", optional = true }
# js-sys = "0.3"
# wasm-bindgen = "0.2"
# wasm-bindgen-futures = "0.4"
cfg-if = "1"
# reqwest = { version = "0.11", features = ["blocking", "json"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
# async-std = "1"
tokio = { version = "1", features = ["sync","macros","rt"] }
# tokio = { version = "1", features = ["sync","macros","io-util","rt","time"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Exception",
]

[profile.release]
lto = true
